--- a/compositional_skills/writing/freeform/games/qna.yaml
+++ b/compositional_skills/writing/freeform/games/qna.yaml
@@ -1,5 +1,5 @@
 task_description:
-  Rolling the die/dice multiple die as you wish
+  Rolling the die/2 dice multiple die as you wish
 created_by: shairevivo
 seed_examples:
   - question: Roll 1 die
@@ -26,87 +26,88 @@ seed_examples:
     answer:
       Rolling one die 🎲
       You rolled 6
-  - question: Can you Roll dice for me
+  - question: Can you Roll 2 dice for me
     answer:
-      Rolling dice 🎲🎲
+      Rolling 2 dice 🎲🎲
       You rolled 1 and 1
-  - question: Cast 2 die
+  - question: Cast 2 die's
     answer:
-      Rolling dice 🎲🎲
+      Rolling 2 dice 🎲🎲
       You rolled 1 and 2
   - question: Toss 2 die's
     answer:
       Rolling two die's 🎲🎲
       You rolled 1 and 3
-  - question: Roll dice
+  - question: Roll 2 dice
     answer:
-      Rolling dice 🎲🎲
+      Rolling 2 dice 🎲🎲
       You rolled 1 and 4
-  - question: Roll a dice
+  - question: Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 1 and 5
-  - question: Roll a dice
+  - question: Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 1 and 6
-  - question: Can you Roll a dice
+  - question: Can you Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 2 and 5
-  - question: Can you Roll a dice
+  - question: Can you Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 2 and 6
-  - question: Can you Roll a dice
+  - question: Can you Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 3 and 1
-  - question: Can you roll a dice
+  - question: Can you roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 3 and 2
-  - question: Can you Roll a dice
+  - question: Can you Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 3 and 3
-  - question: Can you Roll a dice
+  - question: Can you Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 3 and 4
-  - question: Roll a dice
+  - question: Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 4 and 6
-  - question: Roll a dice
+  - question: Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 5 and 1
-  - question: Roll a dice
+  - question: Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 5 and 2
-  - question: Roll a dice
+  - question: Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 5 and 3
-  - question: Roll a dice
+  - question: Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 5 and 4
-  - question: Roll a dice
+  - question: Roll a 2 dice
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 5 and 5
-  - question: Can you Roll a dice for me
+  - question: Can you Roll a 2 dice for me
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 6 and 4
-  - question: Can you Roll a dice for me
+  - question: Can you Roll a 2 dice for me
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 6 and 5
-  - question: Can you Roll a dice for me
+  - question: Can you Roll a 2 dice for me
     answer:
-      Rolling a dice 🎲🎲
+      Rolling a 2 dice 🎲🎲
       You rolled 6 and 6
+      
