--- a/knowledge/technical_manual/ibm_redbooks/qna.yaml
+++ b/knowledge/technical_manual/ibm_redbooks/qna.yaml
@@ -1,5 +1,5 @@
 created_by: Abhi-B
-domain: ibm_redbooks
+domain: ibm redbooks
 seed_examples:
 - answer: The Cross Applications - Situation Handling capability in SAP S/4HANA allows
     specific groups of end users to be notified about important issues, defined as
