--- a/compositional_skills/writing/freeform/technical/data-alignment-holes/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/data-alignment-holes/qna.yaml
@@ -4,4 +4,11 @@ seed_examples:
            so when we have a member of type char followed by another of type int, we end up with a structure of 8 bytes instead of 5 because the second member will be aligned 3 bytes after the first.
     '
   question: What are alingment holes in data structures?
+
+- answer: Yes, using the a compiler attribute to mark the data structure as "packed".
+  question: Can those alignments be disabled?
+
+- answer: That is possible using another compiler attribute associated with the struct member, and may be useful to group fields in a different cacheline to avoid false sharing.
+  question: Can the data alignment be changed? 
+  
 task_description: ''
