--- a/compositional_skills/writing/freeform/technical/layering/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/layering/qna.yaml
@@ -1,4 +1,5 @@
 created_by: scottmarlow
+task_description: Determine if your application module layering is correct.
 seed_examples:
 - answer:  Each layer of your application only depends on lower layers which is the main requirement of properly layered applications.
 
