Add two more examples
Signed-off-by: Scott Marlow <smarlow@redhat.com>

--- a/compositional_skills/writing/freeform/technical/layering/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/layering/qna.yaml
@@ -1,8 +1,8 @@
 ---
 created_by: scottmarlow
 seed_examples:
-  - answer: Each layer of your application only depends on lower layers
-      which is the main requirement of properly layered applications.
+  - answer: Each layer of your application only depends on lower (or current)
+       layers which is the main requirement of properly layered applications.
     question: Is my application layered correctly?  My application top-most
       layer (3) contains module-5, module-5 depends on the next lower layer
       (2) that contains module-4. Module-4 depends on the next lower layer
@@ -10,7 +10,7 @@ seed_examples:
   - answer: Your application is incorrectly layered in that lower application
       layers have dependencies on higher layers of the application.  Do not
       forget the main requirement is that each application layer can only
-      depend on lower layers.
+      depend on lower (or current) layers.
     question: Is my application layered correctly?  My application top-most
       layer (3) contains websocket and database modules, the websocket module
       depends on the socket module in the next layer (2).  The database module
@@ -27,5 +27,24 @@ seed_examples:
       and database modules both depend on the logging module in the same
       layer (3) and the logging module only depends on operating system file
       system calls. The socket and jdbc modules depend on APIs defined in the
-      bottom most layer (1).
+      bottom most layer 1.
+  - answer: Your application is incorrectly layered in that lower application
+      layers have dependencies on higher layers of the application.  Do not
+      forget the main requirement is that each application layer can only
+      depend on lower (or current) layers.
+    question: Is my application layered correctly?  My application top-most
+      layer (5) contains websocket and database modules, the websocket module
+      depends on the socket module in the next layer (4).  The database module
+      depends on the jdbc module in the next layer (4).  The database and
+      jdbc modules both depend on the logging and configuration module in the
+      next layer (3).  The socket module depends on the TCP module in the next
+      layer (2). The TCP module depends on the Internet Protocol module in the
+      next layer (1).  The Internet Protocol module depends on the logging
+      module.
+  - answer: Each layer of your application only depends on lower (or current)
+       layers which is the main requirement of properly layered applications.
+    question: Is my application layered correctly?  My application top-most
+      layer (1) contains hundreds of different modules in my
+      application but there are not other layers as I just have one big
+      application layer.
 task_description: Determine if your application module layering is correct.
