schema: We add attribution to the taxonomy schema
All examples must contain an attribution key. The lint check is updated
to test for the presence of the attribution key and its subkeys.

attribution is an array of mappings where each mapping has a source and
license key. source is a URL to 3rd party information or `self-authored`
if the contributor authored the information. license is the SPDX
license identifier of the 3rd party information or `Apache-2.0` (repo
license) if the contributor authored the information.

Fixes https://github.com/instruct-lab/taxonomy/issues/182

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -85,5 +85,8 @@ jobs:
             if $( yq '.seed_examples[] | has("context")'   $file | grep -q true ); then
               yq '.seed_examples[] | .context| length > 0' $file | grep -q false && error "$(yq '.seed_examples|line'    $file):1: missing/empty 'context's"
             fi
+            yq '.seed_examples[].attribution | length > 0' $file | grep -q false && error "$(yq '.seed_examples|line'    $file):1: missing/empty 'attribution's"
+            yq '.seed_examples[].attribution[].source | length > 0' $file | grep -q false && error "$(yq '.seed_examples|line'    $file):1: missing/empty 'attribution source's"
+            yq '.seed_examples[].attribution[].license | length > 0' $file | grep -q false && error "$(yq '.seed_examples|line'    $file):1: missing/empty 'attribution license's"
           done
           exit $ERR
