Revert "(chore) Remove `created_by` field (#475)"
This reverts commit ba25a8ad88a57f3b31f304d60f2462198a913f4d.

Signed-off-by: Kai Xu <xuk@ibm.com>

--- a/compositional_skills/extraction/abstractive/main_takeaway/qna.yaml
+++ b/compositional_skills/extraction/abstractive/main_takeaway/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: 'The main takeaways from the above text are:\n\n1. Up Front is a 1951 comedy
     film directed by Alexander Hall, starring Tom Ewell and David Wayne, based on
