--- a/compositional_skills/extraction/inference/quantitative/word_frequency/qna.yaml
+++ b/compositional_skills/extraction/inference/quantitative/word_frequency/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: stars, 2\nmoon, 1\nsun, 1
   context: '''"Under the night sky, the moon shone brightly, surrounded by countless
