--- a/compositional_skills/writing/freeform/brainstorming/idea_generation/qna.yaml
+++ b/compositional_skills/writing/freeform/brainstorming/idea_generation/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: '1. "Eco-Hero Challenge": Create an interactive campaign that encourages
     customers to become "Eco-Heroes" by switching to your sustainable home products.
