--- a/compositional_skills/writing/freeform/debate/qna.yaml
+++ b/compositional_skills/writing/freeform/debate/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: Economist:\n"Implementing a universal basic income (UBI) could significantly
     reduce poverty rates and provide a financial safety net for individuals who lose
