--- a/compositional_skills/writing/freeform/technical/product_description/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/product_description/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: "**Discover the Magic of [Your Brand] Hand-Painted Wall Art - One-of-a-Kind,\
     \ Durable, and Versatile Masterpieces for Your Space!**\n\nTransform your living\
