--- a/compositional_skills/writing/grounded/summarization/wiki_insights/detailed/qna.yaml
+++ b/compositional_skills/writing/grounded/summarization/wiki_insights/detailed/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: "\"The text provided gives information about various individuals who are\
     \ directors in different fields such as film, television, theatre, art museums,\
