--- a/knowledge/textbook/history/qna.yaml
+++ b/knowledge/textbook/history/qna.yaml
@@ -1,3 +1,4 @@
+created_by: Abhi-B
 domain: history
 seed_examples:
 - answer: Wealthy Safavid women raised their public stature by becoming patrons of
