--- a/compositional_skills/extraction/abstractive/outline/qna.yaml
+++ b/compositional_skills/extraction/abstractive/outline/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: "I. Hanro Smitsman\\n\\n* Born in 1967 in Breda, Netherlands\\n* Writer\
     \ and director of film and television\\n* Known for \"Trilogie,\" consisting of\
