--- a/compositional_skills/extraction/inference/quantitative/table_analysis/qna.yaml
+++ b/compositional_skills/extraction/inference/quantitative/table_analysis/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: 'Q1: High 200, Low 100; Q2: High 210, Low 110; Q3: High 220, Low 120; Q4:
     High 230, Low 130'
