--- a/compositional_skills/writing/freeform/prose/stories/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/stories/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: "In the quiet corners of Emily's creative mind lay a realm of her own making,\
     \ a world she had filled with vibrant colors, enchanting characters, and extraordinary\
