--- a/compositional_skills/writing/freeform/social_media/twitter/qna.yaml
+++ b/compositional_skills/writing/freeform/social_media/twitter/qna.yaml
@@ -1,3 +1,4 @@
+created_by: shivsr
 seed_examples:
 - answer: "Embrace the grind and let your passion fuel your purpose! \U0001F4AA\U0001F525\
     \ This #MotivationMonday, remember that every challenge is an opportunity in disguise.\
