--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,4 +10,5 @@
 
 * @instruct-lab/taxonomy-approvers
 *.md   @mairin @juliadenham @instruct-lab/taxonomy-approvers
+/.github/ @instruct-lab/taxonomy-maintainers @instruct-lab/taxonomy-approvers
 /docs/ @mairin @juliadenham @instruct-lab/taxonomy-approvers
