Replaced extra spaces and made the text  simpler to read

--- a/compositional_skills/writing/freeform/recommendation_letter/qna.yaml
+++ b/compositional_skills/writing/freeform/recommendation_letter/qna.yaml
@@ -1,18 +1,19 @@
 created_by: jpoohern
 seed_examples:
-- answer: "# To Whom It May Concern\n\n I am writing to wholeheartedly recommend (\"co-worker\") for the position of\
+- answer: "To Whom It May Concern\n\n
+    \ I am writing to wholeheartedly recommend (\"co-worker\") for the position of\
     \ (\"Web Site Administrator \") at your esteemed [Your Full Name or Company Name].\n
     \ I have had the pleasure of working with (\"co-worker\") for several years in the capacity of (\"Web Site Administrator \"),\
     \ and I can confidently say that he is an exceptional (\"Web Site Administrator \"),\
-    \ with a deep understanding of web administration and a proven track record of success.\n\n
+    \ with a deep understanding of web administration and a proven track record of success.\
     \ (\"co-worker\") possesses a remarkable blend of technical expertise and leadership skills.\
     \ (\"co-worker\") boasts a comprehensive understanding of web technologies, including, server administration, network security, content management systems, web development. \
     \ This knowledge, coupled with his hands-on experience in managing complex web infrastructure,\
     \ has been instrumental in ensuring the smooth operation and continuous improvement of our company's online presence.\n\n
     \ Some of his multiple achievements and contributions are:\n\n
-    \ * Spearheaded the migration of our website to a new platform, resulting in a [Percentage] increase in site traffic and a [Percentage] improvement in conversion rates.\n\n
-    \ * Implemented a robust security system that effectively prevented several cyberattacks, safeguarding sensitive company data.\n\n
-    \ * Developed and implemented a comprehensive web performance optimization strategy, leading to a [Percentage] reduction in page load times.\n\n
+    \ * Spearheaded the migration of our website to a new platform, resulting in a [Percentage] increase in site traffic and a [Percentage] improvement in conversion rates.\n
+    \ * Implemented a robust security system that effectively prevented several cyberattacks, safeguarding sensitive company data.\n
+    \ * Developed and implemented a comprehensive web performance optimization strategy, leading to a [Percentage] reduction in page load times.\n
     \ * Built and mentored a high-performing team of web administrators, fostering a culture of collaboration and innovation.\n\n
     \ Please do not hesitate to contact me if you have any questions or require additional information.\n
     \ I am happy to provide further details about (\"co-worker\") 's qualifications and accomplishments.\n
